Custom Scroll Container

--- a/shared/components/main-offer/MainOffer.module.scss
+++ b/shared/components/main-offer/MainOffer.module.scss
@@ -29,7 +29,10 @@
     margin-inline: auto;
     object-fit: cover;
     max-width: 100%;
-    height: auto;
+
+    @media (max-width: 768px) {
+      height: auto;
+    }
   }
 
   &__info {
